--- a/src/SenseNet.Search.Lucene29.Centralized.GrpcService/appsettings.Production.json
+++ b/src/SenseNet.Search.Lucene29.Centralized.GrpcService/appsettings.Production.json
@@ -8,7 +8,7 @@
           "hostnameOrAddress": "",
           "port": "12201",
           "transportType": "Udp",
-          "restrictedToMinimumLevel": "Information"
+          "restrictedToMinimumLevel": "Verbose"
         }
       }
     ]
