Update sn references, raise internal versions and switch off security queue trace by default.

--- a/src/SenseNet.Search.Lucene29.Centralized.GrpcService/appsettings.json
+++ b/src/SenseNet.Search.Lucene29.Centralized.GrpcService/appsettings.json
@@ -26,7 +26,7 @@
   },
   "sensenet": {
     "tracing": {
-      "TraceCategories": "System,Security,SecurityQueue,Index,Database,Query"
+      "TraceCategories": "System,Security,Index,Database,Query"
     },
     "security": {
       "rabbitmq": {
