--- a/src/SenseNet.Search.Lucene29.Centralized.GrpcService/SenseNet.Search.Lucene29.Centralized.GrpcService.csproj
+++ b/src/SenseNet.Search.Lucene29.Centralized.GrpcService/SenseNet.Search.Lucene29.Centralized.GrpcService.csproj
@@ -20,6 +20,7 @@
   <ItemGroup>
     <PackageReference Include="Grpc.AspNetCore" Version="2.48.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="SenseNet.Security.EFCSecurityStore" Version="3.1.1.1" />
     <PackageReference Include="SenseNet.Security.Messaging.RabbitMQ" Version="1.2.4.2" />
     <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
