--- a/src/SenseNet.Search.Lucene29.Local/SenseNet.Search.Lucene29.Local.csproj
+++ b/src/SenseNet.Search.Lucene29.Local/SenseNet.Search.Lucene29.Local.csproj
@@ -20,6 +20,7 @@
 		<PublishRepositoryUrl>true</PublishRepositoryUrl>
 		<IncludeSymbols>true</IncludeSymbols>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 	</PropertyGroup>
 
 	<ItemGroup>
