Configure search service quotas and insert data to the health-configration

--- a/src/SenseNet.Search.Lucene29.Centralized.GrpcService/appsettings.json
+++ b/src/SenseNet.Search.Lucene29.Centralized.GrpcService/appsettings.json
@@ -32,6 +32,13 @@
       "rabbitmq": {
         "ServiceUrl": ""
       }
+    },
+    "search": {
+      "service": {
+        "MaxReceiveMessageSize": null,
+        "MaxSendMessageSize": null,
+        "EnableDetailedErrors":  null 
+      }
     }
   }
 }
