--- a/src/SenseNet.Search.Lucene29.Centralized.Common/SenseNet.Search.Lucene29.Centralized.Common.csproj
+++ b/src/SenseNet.Search.Lucene29.Centralized.Common/SenseNet.Search.Lucene29.Centralized.Common.csproj
@@ -16,6 +16,7 @@
 		<PackageIconUrl>https://raw.githubusercontent.com/SenseNet/sn-resources/master/images/sn-icon/sensenet-icon-64.png</PackageIconUrl>
 		<Authors>kavics,tusmester</Authors>
 		<DebugType>portable</DebugType>
+		<LangVersion>latest</LangVersion>
 		<PublishRepositoryUrl>true</PublishRepositoryUrl>
 		<IncludeSymbols>true</IncludeSymbols>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
@@ -28,7 +29,7 @@
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<PackageReference Include="SenseNet.Tools" Version="3.2.13" />
 		<PackageReference Include="SenseNet.Security" Version="4.2.4" />
-		<PackageReference Include="SenseNet.Search" Version="2.4.19" />
+		<PackageReference Include="SenseNet.Search" Version="2.4.19.1" />
 	</ItemGroup>
 
 </Project>
