--- a/src/SenseNet.Search.Lucene29.Centralized.Index/SenseNet.Search.Lucene29.Centralized.Index.csproj
+++ b/src/SenseNet.Search.Lucene29.Centralized.Index/SenseNet.Search.Lucene29.Centralized.Index.csproj
@@ -19,6 +19,7 @@
 		<PackageIconUrl>https://raw.githubusercontent.com/SenseNet/sn-resources/master/images/sn-icon/sensenet-icon-64.png</PackageIconUrl>
 		<Authors>kavics,tusmester</Authors>
 		<DebugType>portable</DebugType>
+		<LangVersion>latest</LangVersion>
 		<PublishRepositoryUrl>true</PublishRepositoryUrl>
 		<IncludeSymbols>true</IncludeSymbols>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
@@ -29,7 +30,7 @@
 		<PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.1" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<PackageReference Include="SenseNet.Security" Version="4.2.4" />
-		<PackageReference Include="SenseNet.Search" Version="2.4.19" />
+		<PackageReference Include="SenseNet.Search" Version="2.4.19.1" />
 		<PackageReference Include="SenseNet.Search.Lucene29.Lucene.Net" Version="2.9.4.301" />
 	</ItemGroup>
 
