--- a/src/Tests/SenseNet.Search.Lucene29.Tests/SenseNet.Search.Lucene29.Tests.csproj
+++ b/src/Tests/SenseNet.Search.Lucene29.Tests/SenseNet.Search.Lucene29.Tests.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
     <PackageReference Include="coverlet.collector" Version="3.0.2" />
+    <PackageReference Include="SenseNet.ContentRepository.InMemory" Version="1.0.1" />
     <PackageReference Include="SenseNet.Services.Core" Version="1.0.1" />
     <PackageReference Include="SenseNet.Tests.Core" Version="1.1.14" />
   </ItemGroup>
