--- a/src/SenseNet.Search.Lucene29.Centralized.GrpcClient/SenseNet.Search.Lucene29.Centralized.GrpcClient.csproj
+++ b/src/SenseNet.Search.Lucene29.Centralized.GrpcClient/SenseNet.Search.Lucene29.Centralized.GrpcClient.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.1;net6.0</TargetFrameworks>
+		<TargetFramework>net8.0</TargetFramework>
 		<Version>1.0.2</Version>
 		<Company>Sense/Net Inc.</Company>
 		<Description>Grpc service client for the Central Lucene29 Search Engine for the sensenet platform.</Description>
@@ -34,7 +34,7 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="SenseNet.Tools" Version="3.2.13" />
+		<PackageReference Include="SenseNet.Tools" Version="3.2.13.1" />
 	</ItemGroup>
 
 	<ItemGroup>
