--- a/src/SenseNet.Search.Lucene29.Centralized/SenseNet.Search.Lucene29.Centralized.csproj
+++ b/src/SenseNet.Search.Lucene29.Centralized/SenseNet.Search.Lucene29.Centralized.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0;net6.0</TargetFrameworks>
+		<TargetFramework>net8.0</TargetFramework>
 		<Version>1.4.14</Version>
 		<Authors>kavics,tusmester</Authors>
 		<Company>Sense/Net Inc.</Company>
@@ -25,10 +25,11 @@
 
 	<ItemGroup>
 		<PackageReference Include="Grpc.Net.Client" Version="2.48.0" />
-		<PackageReference Include="SenseNet.Tools" Version="3.2.13" />
-		<PackageReference Include="SenseNet.ContentRepository" Version="7.7.42" />
+		<PackageReference Include="SenseNet.Tools" Version="3.2.13.1" />
+		<PackageReference Include="SenseNet.ContentRepository" Version="7.7.42.1" />
 		<PackageReference Include="SenseNet.Search.Lucene29.Lucene.Net" Version="2.9.4.301" />
 		<PackageReference Include="System.ServiceModel.Primitives" Version="4.10.0" />
+		<PackageReference Include="System.Diagnostics.EventLog" Version="7.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
