--- a/src/SenseNet.Search.Lucene29.Common/SenseNet.Search.Lucene29.Common.csproj
+++ b/src/SenseNet.Search.Lucene29.Common/SenseNet.Search.Lucene29.Common.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0;net6.0</TargetFrameworks>
+		<TargetFramework>net8.0</TargetFramework>
 		<Version>7.4.16</Version>
 		<Authors>kavics,tusmester</Authors>
 		<Company>Sense/Net Inc.</Company>
@@ -24,8 +24,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="SenseNet.Tools" Version="3.2.13" />
-		<PackageReference Include="SenseNet.ContentRepository" Version="7.7.42" />
+		<PackageReference Include="SenseNet.Tools" Version="3.2.13.1" />
+		<PackageReference Include="SenseNet.ContentRepository" Version="7.7.42.1" />
+		<PackageReference Include="System.Diagnostics.EventLog" Version="7.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
