--- a/src/Tests/SenseNet.Search.Lucene29.Tests/SenseNet.Search.Lucene29.Tests.csproj
+++ b/src/Tests/SenseNet.Search.Lucene29.Tests/SenseNet.Search.Lucene29.Tests.csproj
@@ -8,10 +8,13 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.5.1" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.1" />
-    <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
-    <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
-    <PackageReference Include="coverlet.collector" Version="3.0.2" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
+    <PackageReference Include="MSTest.TestAdapter" Version="3.7.1" />
+    <PackageReference Include="MSTest.TestFramework" Version="3.7.1" />
+    <PackageReference Include="coverlet.collector" Version="6.0.3">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="SenseNet.ContentRepository.InMemory" Version="1.0.1.1" />
     <PackageReference Include="SenseNet.Services.Core" Version="1.0.1.1" />
     <PackageReference Include="SenseNet.Tests.Core" Version="1.1.14.1" />
