--- a/src/SenseNet.Search.Lucene29.Centralized.Common/SenseNet.Search.Lucene29.Centralized.Common.csproj
+++ b/src/SenseNet.Search.Lucene29.Centralized.Common/SenseNet.Search.Lucene29.Centralized.Common.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0;net6.0</TargetFrameworks>
-		<Version>7.5.14</Version>
+		<TargetFramework>net8.0</TargetFramework>
+		<Version>7.6.0</Version>
 		<Company>Sense/Net Inc.</Company>
 		<Description>Common service elements for the Central Lucene29 Search Engine for the sensenet platform.</Description>
 		<Copyright>Copyright © Sense/Net Inc.</Copyright>
@@ -24,12 +24,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.1" />
-		<PackageReference Include="System.ServiceModel.Primitives" Version="4.10.0" />
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-		<PackageReference Include="SenseNet.Tools" Version="3.2.13" />
-		<PackageReference Include="SenseNet.Security" Version="4.2.4" />
-		<PackageReference Include="SenseNet.Search" Version="2.4.20" />
+		<PackageReference Include="System.ServiceModel.Primitives" Version="8.1.1" />
+		<PackageReference Include="SenseNet.Tools" Version="3.3.0" />
+		<PackageReference Include="SenseNet.Security" Version="4.3.0" />
+		<PackageReference Include="SenseNet.Search" Version="2.5.0" />
 	</ItemGroup>
 
 </Project>
