--- a/src/SenseNet.Search.Lucene29.Centralized.GrpcClient/SenseNet.Search.Lucene29.Centralized.GrpcClient.csproj
+++ b/src/SenseNet.Search.Lucene29.Centralized.GrpcClient/SenseNet.Search.Lucene29.Centralized.GrpcClient.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.1;net6.0</TargetFrameworks>
-		<Version>1.0.2</Version>
+		<TargetFramework>net8.0</TargetFramework>
+		<Version>1.1.0</Version>
 		<Company>Sense/Net Inc.</Company>
 		<Description>Grpc service client for the Central Lucene29 Search Engine for the sensenet platform.</Description>
 		<Copyright>Copyright © Sense/Net Inc.</Copyright>
@@ -28,13 +28,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Google.Protobuf" Version="3.21.6" />
-		<PackageReference Include="Grpc.Net.Client" Version="2.48.0" />
-		<PackageReference Include="Grpc.Tools" Version="2.48.1">
+		<PackageReference Include="Google.Protobuf" Version="3.29.3" />
+		<PackageReference Include="Grpc.Net.Client" Version="2.67.0" />
+		<PackageReference Include="Grpc.Tools" Version="2.69.0">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="SenseNet.Tools" Version="3.2.13" />
+		<PackageReference Include="SenseNet.Tools" Version="3.3.0" />
 	</ItemGroup>
 
 	<ItemGroup>
