--- a/src/SenseNet.Search.Lucene29.Centralized.Index/SenseNet.Search.Lucene29.Centralized.Index.csproj
+++ b/src/SenseNet.Search.Lucene29.Centralized.Index/SenseNet.Search.Lucene29.Centralized.Index.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0;net6.0</TargetFrameworks>
+		<TargetFramework>net8.0</TargetFramework>
 		<AssemblyName>SenseNet.Search.Lucene29.Centralized.Index</AssemblyName>
 		<RootNamespace>SenseNet.Search.Lucene29.Centralized.Index</RootNamespace>
-		<Version>2.1.14</Version>
+		<Version>2.2.0</Version>
 		<Company>Sense/Net Inc.</Company>
 		<Description>Index layer for the sensenet Centralized search engine implementation for Lucene29.</Description>
 		<Copyright>Copyright © Sense/Net Inc.</Copyright>
@@ -26,11 +26,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="SenseNet.Common" Version="7.5.16" />
-		<PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.1" />
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-		<PackageReference Include="SenseNet.Security" Version="4.2.4" />
-		<PackageReference Include="SenseNet.Search" Version="2.4.20" />
+		<PackageReference Include="SenseNet.Common" Version="7.6.0" />
+		<PackageReference Include="SenseNet.Security" Version="4.3.0" />
+		<PackageReference Include="SenseNet.Search" Version="2.5.0" />
 		<PackageReference Include="SenseNet.Search.Lucene29.Lucene.Net" Version="2.9.4.301" />
 	</ItemGroup>
 
