--- a/src/SenseNet.Search.Lucene29.Local/SenseNet.Search.Lucene29.Local.csproj
+++ b/src/SenseNet.Search.Lucene29.Local/SenseNet.Search.Lucene29.Local.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0;net6.0</TargetFrameworks>
-		<Version>7.4.14</Version>
+		<TargetFramework>net8.0</TargetFramework>
+		<Version>7.5.0</Version>
 		<Authors>kavics,tusmester</Authors>
 		<Company>Sense/Net Inc.</Company>
 		<Copyright>Copyright © Sense/Net Inc.</Copyright>
@@ -24,8 +24,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="SenseNet.Tools" Version="3.2.13" />
-		<PackageReference Include="SenseNet.ContentRepository" Version="7.7.42" />
+		<PackageReference Include="SenseNet.Tools" Version="3.3.0" />
+		<PackageReference Include="SenseNet.ContentRepository" Version="7.8.0" />
 	</ItemGroup>
 
 	<ItemGroup>
