--- a/src/SenseNet.Search.Lucene29/SenseNet.Search.Lucene29.csproj
+++ b/src/SenseNet.Search.Lucene29/SenseNet.Search.Lucene29.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0;net6.0</TargetFrameworks>
+		<TargetFramework>net8.0</TargetFramework>
 		<AssemblyName>SenseNet.Search.Lucene29</AssemblyName>
 		<RootNamespace>SenseNet.Search.Lucene29</RootNamespace>
-		<Version>7.4.14</Version>
+		<Version>7.5.0</Version>
 		<Company>Sense/Net Inc.</Company>
 		<Description>Lucene29 library for the sensenet platform containing the core indexing layer that works with Lucene index files directly.</Description>
 		<Copyright>Copyright © Sense/Net Inc.</Copyright>
@@ -25,11 +25,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.1" />
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-		<PackageReference Include="SenseNet.Tools" Version="3.2.13" />
-		<PackageReference Include="SenseNet.Security" Version="4.2.4" />
-		<PackageReference Include="SenseNet.Search" Version="2.4.20" />
+		<PackageReference Include="SenseNet.Tools" Version="3.3.0" />
+		<PackageReference Include="SenseNet.Security" Version="4.3.0" />
+		<PackageReference Include="SenseNet.Search" Version="2.5.0" />
 		<PackageReference Include="SenseNet.Search.Lucene29.Lucene.Net" Version="2.9.4.301" />
 	</ItemGroup>
 
